Update src/test/java/com/greencity/cucumber/steps/CancelNewsSteps.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>